Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-82953

CreateCollectionCoordinator::checkIfOptionsConflict should be more verbose

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v7.2, v7.1, v7.0, v6.0, v5.0
    • CAR Team 2023-11-13

      When DDL operations are erroring due to a coordinator already being instantiated on the same namespace with different parameters, we usually include in the assertion the request that spawned the ongoing DDL (e.g. in the rename coordinator).

      This helps debugging issues because the logged assertion will both contain the failed and the running DDL commands. Purpose of this ticket is to implement a similar pattern in the create coordinator that has never included the original request so far.

            Assignee:
            pierlauro.sciarelli@mongodb.com Pierlauro Sciarelli
            Reporter:
            enrico.golfieri@mongodb.com Enrico Golfieri
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: