SERVER-82953 log original request when shardCollection operations conflict